# atomiq-bet-settlement

./: .env.example  .gitignore  Anchor.toml  Anchor.toml.backup  BLOCKCHAIN_INTEGRATION.md  Cargo-test.toml  Cargo.toml  DEPLOYMENT_INSTRUCTIONS.md  DEPLOY_MANUAL.md  E2E_TEST_REPORT.md  ENABLING_BLOCKCHAIN.md  FULLPROJECTREADME.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  INFRASTRUCTURE_STATUS.md  QUICK_DEPLOY_INSTRUCTIONS.md  README.md  REFACTORING_LOG.md  SOLANA_PLAYGROUND_DEPLOYMENT.md  TESTING_SESSION_SUMMARY.md  TEST_REPORT.md  URGENT_PROGRAM_UPGRADE_NEEDED.md  WALLET_ADDRESSES.md  build-with-029.sh  casino-wsol-account.json  check_token_owners.js  create-allowance-rapid.sh  create-native-sol-allowance.sh  create_allowance_fix.js  deploy-to-devnet.sh  deposit-and-test.sh  dump.rdb  fresh-restart.sh  fund-casino-vault.js  init-sol-allowance.sh  init-vaults-simple.sh  initialize-vault-only.js  initialize-vaults.sh  package.json  place-real-bet.js  (+24 more)
apps/frontend/: .env.example  next.config.js  package.json  tsconfig.json
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/components/: BetHistory.tsx  BetInterface.tsx  Providers.tsx  VaultDashboard.tsx  WalletConnect.tsx
contracts/: CHECKLIST.md  README.md
contracts/programs/vault/: Cargo.toml
contracts/programs/vault/src/: errors.rs
docs/: CASINO_VAULT_IMPLEMENTATION.md  CURRENT_STATUS.md  DEPLOYMENT_2026-01-17.md  DEPLOY_MANUAL.md  E2E_TEST_SUMMARY.md  ERROR_CODES.md  HANDOFF_2026-01-17.md  PHASE_1B_DEPLOYMENT.md  PHASE_3_SUMMARY.md  PHASE_4_SUMMARY.md  PROGRAM_ID_UPDATE_GUIDE.md  QUICK_DEPLOY_INSTRUCTIONS.md  READY_TO_DEPLOY.md  REFACTORING_LOG.md  SOLANA_PLAYGROUND_GUIDE.md  STATUS.md  TX_DEDUP_FIX.md
keys/: README.md
programs/vault/: Anchor.toml  Cargo.toml  package.json  pnpm-lock.yaml  test-wallet.json
programs/vault/src/: errors.rs  lib.rs  state.rs  validation.rs
programs/vault/src/instructions/: approve_allowance_v2.rs  initialize_casino_vault.rs  mod.rs  spend_from_allowance.rs  withdraw_spl.rs
programs/vault/tests/: vault.ts
scripts/: approve-allowance-cli.js  build-program.sh  check-casino-vault.js  check-program-pdas.js  comprehensive-test.sh  create-allowance-rapid.sh  create-native-sol-allowance.sh  create-sol-allowance.ts  deploy-to-devnet.sh  deposit-and-test.sh  fund-casino-vault.js  init-sol-allowance.sh  init-vaults-simple.sh  initialize-casino-vault.js  initialize-vault-only.js  initialize-vaults.sh  place-real-bet.js  run-tests.sh  setup-wrapped-sol-complete.sh  setup-wrapped-sol.sh  start-services.sh  temp_derive_casino.js  test-onchain.sh  test-simple-tx.rs  transfer-sol.js  update-program-id.sh  verify-all-program-ids.sh  view-logs.sh
services/backend/: Cargo.toml
services/backend/migrations/: 20260115000001_initial_schema.sql
services/backend/src/: config.rs  domain.rs  errors.rs  extractors.rs  lib.rs  main.rs  middleware.rs  services.rs  state.rs
services/backend/src/handlers/: bets.rs  external.rs  health.rs  metrics.rs  mod.rs
services/backend/src/repository/: audit_repository.rs  bet_repository.rs  bet_repository_tests.rs  mod.rs
services/backend/src/repository/redis_bet_repository/: deserialization.rs  keys.rs  lua_scripts.rs  mod.rs  retry.rs  status.rs
services/backend/tests/: error_scenarios.rs
services/backend/tests/common/: mod.rs
services/processor/: .env.example  Cargo.toml
services/processor/src/: batch_logic_tests.rs  batch_processor.rs  blockchain_client.rs  circuit_breaker.rs  config.rs  coordinator.rs  domain.rs  main.rs  reconciliation.rs  retry_strategy.rs  settlement_worker.rs  solana_account_parsing.rs  solana_client.rs  solana_client_stub.rs  solana_instructions.rs  solana_pda.rs  solana_simulation.rs  solana_tx.rs  solana_tx.rs.backup  solana_tx_original.rs  worker_pool.rs  worker_pool_original.rs
services/processor/src/worker_pool/: backend_client.rs  batch_processor.rs  mod.rs  pool.rs  simulation.rs  worker.rs
services/processor/tests/: batch_processing.rs  rpc_failover.rs
services/shared/: Cargo.toml
services/shared/src/: constants.rs  errors.rs  lib.rs  program_ids.rs  types.rs
solana-playground-deploy/: CHECKLIST.md  Cargo.toml  README.md
solana-playground-deploy/programs/vault/: Cargo.toml
solana-playground-deploy/programs/vault/src/: errors.rs  lib.rs  state.rs  validation.rs
test-ui/: .env.example  .gitignore  COMPLETE_IMPLEMENTATION_GUIDE.md  IMPLEMENTATION.md  NEW_PROJECT_SETUP_GUIDE.md  PDA_FIX_SOLUTION.md  QUICKSTART.md  README.md  REFACTORING_COMPLETE.md  REUSABLE_SDK_GUIDE.md  WEBSOCKET_ERROR_SYSTEM_README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  setup.sh  tsconfig.tsbuildinfo  vite.config.js
test-ui/public/: verify-program-id.html
test-ui/src/: App.tsx  index.css  vite-env.d.ts
test-ui/src/components/: BettingInterface.tsx  LiveCasinoDashboard.tsx  ReusableSDKDemo.tsx  ReusableWalletConnect.tsx  TransactionLog.tsx  VaultManager.tsx  VaultManagerSDK.tsx  WalletConnect.tsx
test-ui/src/hooks/: useApi.ts  useRecentGames.ts  useTransactions.ts
test-ui/src/sdk/: MEMO_GUIDE.md  README.md  env.ts  index.ts
test-ui/src/sdk/api/: client.ts
test-ui/src/sdk/examples/: memo-transactions.ts
test-ui/src/sdk/hooks/: index.ts  useAllowance.ts  useBetting.ts  useVault.ts  useWebSocket.ts
test-ui/src/services/: api.ts  solana.ts
test-ui/src/types/: index.ts
test-ui/src/utils/: transactions.ts
tests/: README.md
tests/load/: load-test.js  run-load-test.sh
(+26 files in other folders)
