[workspace]
members = [
    "services/backend",
    "services/processor",
]
exclude = [
    "programs/vault",
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies with consistent versions
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "streams"] }

# Solana dependencies - use latest compatible versions
solana-sdk = "2.1"
solana-client = "2.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = true
