[workspace]
members = [
    "services/backend",
    "services/processor",
]
exclude = [
    "programs/vault",
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies with consistent versions
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "streams"] }

# Solana dependencies - using 1.17 which is stable
solana-sdk = "1.17"
solana-client = "1.17"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = true
