[package]
name = "processor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Shared types and constants
shared = { path = "../shared" }

# Async runtime
tokio = { workspace = true }
async-trait = "0.1"

# Solana
solana-sdk = { workspace = true }
solana-client = { workspace = true }
spl-associated-token-account = "1.1.3"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client (talk to backend/Atomiq-like API)
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }

# Environment
dotenvy = "0.15"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }

# UUID
uuid = { workspace = true }

# Time
chrono = { workspace = true }

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Web server for metrics
axum = "0.7"

# Retry logic
backoff = { version = "0.4", features = ["tokio"] }

# Concurrency
futures = "0.3"
tokio-util = "0.7"

# Random (for bet outcomes)
rand = "0.8"

[dev-dependencies]
redis = { workspace = true }
tokio-test = "0.4"
